# xgpu

./: .clang-tidy  .gitignore  CMakeLists.txt
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test.cpp
xgpu/: CMakeLists.txt
xgpu/include/xgpu/: xgpu.hpp
xgpu/include/xgpu/core/: backends.hpp  concepts.hpp  core.hpp  enum_wrapper.hpp  error.hpp  expected.hpp  platform.hpp  platform_detection.hpp
xgpu/include/xgpu/data/: data.hpp  physical_device.hpp  physical_device_type.hpp
xgpu/include/xgpu/native/: native.hpp  vulkan_headers.hpp
xgpu/include/xgpu/test/: test.hpp
xgpu/src/: test.cpp
